<resources>
    <string name="app_name">helbred</string>
    <string name="placeholder">Please Wait</string>
    <string name="stretch">Stretch</string>
    <string name="workout">Workout</string>
    <string name="meditate">Meditate</string>
    <string name="hydrate">Hydrate</string>
    <string name="preferences">Settings</string>

    <string-array name="Time">
        <item>5 Minute</item>
        <item>10 Minute</item>
        <item>15 Minute</item>
        <item>30 Minute</item>
    </string-array>
</resources>